WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152646
Fix naming in HistoryItem to refer to scrollPositions
https://bugs.webkit.org/show_bug.cgi?id=152646
Summary
Fix naming in HistoryItem to refer to scrollPositions
Simon Fraser (smfr)
Reported
2016-01-01 21:00:38 PST
Fix naming in HistoryItem to refer to scrollPositions
Attachments
Patch
(12.67 KB, patch)
2016-01-01 21:01 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2016-01-01 21:01:48 PST
Created
attachment 268081
[details]
Patch
WebKit Commit Bot
Comment 2
2016-01-01 21:56:48 PST
Comment on
attachment 268081
[details]
Patch Clearing flags on attachment: 268081 Committed
r194492
: <
http://trac.webkit.org/changeset/194492
>
WebKit Commit Bot
Comment 3
2016-01-01 21:56:52 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4
2016-01-01 22:47:51 PST
Commitbot, what u doin.
Simon Fraser (smfr)
Comment 5
2016-01-01 22:52:42 PST
Alexey, why did commit queue commit this?
Tim Horton
Comment 6
2016-01-02 09:57:24 PST
(In reply to
comment #5
)
> Alexey, why did commit queue commit this?
Why wouldn't it? Zalan cq+'d it, and Mac was fine.
Simon Fraser (smfr)
Comment 7
2016-01-03 09:54:59 PST
commit-queue only looks at mac??
Tim Horton
Comment 8
2016-01-03 12:29:13 PST
(In reply to
comment #7
)
> commit-queue only looks at mac??
Yes! There was a Contributors Meeting talk about making it wait on all platforms (and enforcing use of it), but also a fear that that might make it too slow.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug