Fix naming in HistoryItem to refer to scrollPositions https://bugs.webkit.org/show_bug.cgi?id=152646

Reviewed by Zalan Bujtas.
Source/WebCore:

HistoryItem stores a scrollPosition, so call it that.

No behavior change.

* history/HistoryItem.cpp:
(WebCore::HistoryItem::HistoryItem):
(WebCore::HistoryItem::scrollPosition):
(WebCore::HistoryItem::setScrollPosition):
(WebCore::HistoryItem::clearScrollPosition):
(WebCore::HistoryItem::scrollPoint): Deleted.
(WebCore::HistoryItem::setScrollPoint): Deleted.
(WebCore::HistoryItem::clearScrollPoint): Deleted.
* history/HistoryItem.h:
* loader/HistoryController.cpp:
(WebCore::HistoryController::saveScrollPositionAndViewStateToItem):
(WebCore::HistoryController::clearScrollPositionAndViewState):
(WebCore::HistoryController::restoreScrollPositionAndViewState):
(WebCore::HistoryController::updateForClientRedirect):

Source/WebKit/mac:

HistoryItem stores a scrollPosition, so call it that.

* History/WebHistoryItem.mm:
(-[WebHistoryItem scrollPoint]):

Source/WebKit2:

HistoryItem stores a scrollPosition, so call it that.

No behavior change.

* Shared/SessionState.cpp:
(WebKit::FrameState::encode):
(WebKit::FrameState::decode):
* Shared/SessionState.h:
* UIProcess/mac/LegacySessionStateCoding.cpp:
(WebKit::encodeFrameStateNode):
(WebKit::decodeBackForwardTreeNode):
* WebProcess/WebCoreSupport/SessionStateConversion.cpp:
(WebKit::toFrameState):
(WebKit::applyFrameState):


Canonical link: https://commits.webkit.org/170730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194492 268f45cc-cd09-0410-ab3c-d52691b4dbfc