Source/WebCore/loader/HistoryController.cpp
@@ -76,9 +76,9 @@ void HistoryController::saveScrollPositionAndViewStateToItem(HistoryItem* item)
         return;
 
     if (m_frame.document()->inPageCache())
-        item->setScrollPoint(frameView->cachedScrollPosition());
+        item->setScrollPosition(frameView->cachedScrollPosition());
     else
-        item->setScrollPoint(frameView->scrollPosition());
+        item->setScrollPosition(frameView->scrollPosition());
 #if PLATFORM(IOS)
     item->setExposedContentRect(frameView->exposedContentRect());
     item->setUnobscuredContentRect(frameView->unobscuredContentRect());
@@ -100,7 +100,7 @@ void HistoryController::clearScrollPositionAndViewState()
     if (!m_currentItem)
         return;
 
-    m_currentItem->clearScrollPoint();
+    m_currentItem->clearScrollPosition();
     m_currentItem->setPageScaleFactor(0);
 }
 
@@ -153,7 +153,7 @@ void HistoryController::restoreScrollPositionAndViewState()
     // Don't restore scroll point on iOS as FrameLoaderClient::restoreViewState() does that.
     if (view && !view->wasScrolledByUser()) {
         Page* page = m_frame.page();
-        auto desiredScrollPosition = m_currentItem->scrollPoint();
+        auto desiredScrollPosition = m_currentItem->scrollPosition();
 
         if (page && m_frame.isMainFrame() && m_currentItem->pageScaleFactor())
             page->setPageScaleFactor(m_currentItem->pageScaleFactor() * page->viewScaleFactor(), desiredScrollPosition);
@@ -449,7 +449,7 @@ void HistoryController::updateForClientRedirect()
     // webcore has closed the URL and saved away the form state.
     if (m_currentItem) {
         m_currentItem->clearDocumentState();
-        m_currentItem->clearScrollPoint();
+        m_currentItem->clearScrollPosition();
     }
 
     bool needPrivacy = m_frame.page()->usesEphemeralSession();
